[package]
name = "rust_lib_plc_controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio-modbus = "0.17.0"
tokio = {version = "1", features = ["rt-multi-thread", "net"]}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
